--- a/sMasterK/sMasterK/sMasterK.csproj
+++ b/sMasterK/sMasterK/sMasterK.csproj
@@ -25,5 +25,8 @@
     <EmbeddedResource Update="funkt\persi.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="pesi\afka.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
