--- a/sMasterK/sMasterK.Android/sMasterK.Android.csproj
+++ b/sMasterK/sMasterK.Android/sMasterK.Android.csproj
@@ -85,7 +85,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pilt.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\sMasterK\sMasterK.csproj">
       <Project>{9E9D1479-37F8-4D5C-B0C5-C1487CC714F8}</Project>
@@ -100,6 +102,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\pusja.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\msika.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
