--- a/sMasterK/sMasterK.Android/sMasterK.Android.csproj
+++ b/sMasterK/sMasterK.Android/sMasterK.Android.csproj
@@ -112,5 +112,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\afka.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\alakir.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\arana.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
